<resources>
    <string name="app_name">PharmaQuiz</string>
    <string name="start_text">Prometric Exams Experience</string>
    <string name="previous">Previous</string>
    <string name="previous_desc">Previous Question</string>
    <string name="next">Next</string>
    <string name="next_desc">Next Question</string>
    <string name="finish">Finish</string>
    <string name="finish_desc">End Challenge and Show Score</string>
    <string name="begin_item">Start Quiz</string>
    <string name="score_item">Scoreboard</string>
    <string name="preferences_item">Preferences</string>
    <string name="about_item">About App</string>
    <string name="exit_item">Exit</string>
    <string name="alert">Alert</string>
    <string name="dismiss_option">Dismiss</string>
    <string name="yes_option">Yes</string>
    <string name="no_option">No</string>
    <string name="exit_msg">Are you sure you want to exit ?</string>
    <string name="about_app">PharmaQuiz:\n- MCQs app based on previous prometric exams.\n- Version: 1.0\n- Developed by: Khubab Shamsuddin.\n- Reviewed by: Dr.Ahmed Shamsuddin.\n- Contact: khubab220@gmail.com</string>
    <string name="begin_desc">Begin Questions Challenge</string>
    <string name="score_desc">Show Previous Results</string>
    <string name="preferences_desc">Difficulty and Time</string>
    <string name="about_desc">Application Information</string>
    <string name="exit_desc">Close App</string>
    <string name="question_desc">Question Shown Here!</string>
    <string name="final_score_desc">Score Shown Here!</string>
    <string name="high_score_desc">New High Score!</string>
    <string name="divide_desc">/</string>
    <string name="full_mark_desc">Full Mark Shown Here!</string>
    <string name="corrected_answers_desc">Corrected Answers: </string>
    <string name="answer_desc">Answer Shown Here!</string>
    <string name="loading_msg">Loading Questions</string>
    <string name="end_msg">Gongratulations !</string>
    <string name="time_msg">And it takes</string>
    <string name="restart_item">Restart Quiz</string>
    <string name="back_item">Main Menu</string>
    <string name="share_item">Share Score</string>
    <string name="congrats_item">Gongratulations !</string>
    <string name="bad_score_item">Bad Score Try It Again!</string>
    <string name="question_title">Question: </string>
    <string name="share_message">Hey i try PharmaQuiz and i got score</string>
    <string name="answer_title">Answer: </string>
    <string name="letter_q">Q. </string>
    <string name="letter_a">a. </string>
    <string name="letter_b">b. </string>
    <string name="letter_c">c. </string>
    <string name="letter_d">d. </string>
</resources>
