<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5sp"
        android:weightSum="30"
        android:background="@color/colorBackground"
        tools:context="com.apps.khubab.pharmaquiz.MainActivity">
        <LinearLayout
            android:id="@+id/l_scoreboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="7"
            android:gravity="center"
            android:orientation="horizontal">
            <android.support.v7.widget.CardView
                android:id="@+id/card_score"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                app:cardElevation="2sp"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="false"
                app:cardPreventCornerOverlap="false"
                android:focusable="false">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:weightSum="22">
                    <TextView
                        android:id="@+id/tv_high_score"
                        style="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
                        android:layout_weight="15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="5sp"
                        android:text="@string/high_score_desc"
                        android:visibility="gone"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/tv_score"
                        style="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
                        android:layout_weight="15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="5sp"
                        android:text="@string/final_score_desc"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/tv_divide_symbol"
                        style="@android:style/TextAppearance.DeviceDefault.Small"
                        android:layout_weight=".8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/divide_desc"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/tv_full_mark"
                        style="@android:style/TextAppearance.DeviceDefault.Small"
                        android:layout_weight=".8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/full_mark_desc"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/tv_time"
                        style="@android:style/TextAppearance.DeviceDefault.Small"
                        android:layout_weight=".8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/full_mark_desc"
                        android:textAlignment="center"/>
                    <TextView
                        android:id="@+id/tv_end_msg"
                        style="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
                        android:layout_weight="5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="5sp"
                        android:text="@string/end_msg"
                        android:textAlignment="center"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_wrong_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:gravity="center"
            android:visibility="gone"
            style="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_wrong_answer_title"
                style="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="5sp"
                android:text="@string/corrected_answers_desc"
                android:textAlignment="center"/>
            </LinearLayout>
        <LinearLayout
            android:id="@+id/l_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/card_share"
                android:layout_gravity="start"
                android:layout_weight=".8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                app:cardElevation="2sp"
                android:foreground="?attr/selectableItemBackground"
                android:stateListAnimator="@animator/lift_on_touch"
                android:clickable="true"
                app:cardPreventCornerOverlap="false"
                android:focusable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:weightSum="5">
                    <ImageView
                        android:layout_weight="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/circle_background_white"
                        android:src="@drawable/ic_share_green_24dp"
                        android:padding="5sp"
                        android:layout_marginTop="3sp"
                        android:contentDescription="@string/share_item" />
                    <TextView
                        android:id="@+id/tv_share"
                        style="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
                        android:layout_weight="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="5sp"
                        android:text="@string/share_item"
                        android:textAlignment="center"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/card_restart"
                android:layout_gravity="start"
                android:layout_weight=".8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                app:cardElevation="2sp"
                android:foreground="?attr/selectableItemBackground"
                android:stateListAnimator="@animator/lift_on_touch"
                android:clickable="true"
                app:cardPreventCornerOverlap="false"
                android:focusable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:weightSum="5">
                    <ImageView
                        android:layout_weight="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/circle_background_white"
                        android:src="@drawable/ic_refresh_green_24dp"
                        android:padding="5sp"
                        android:layout_marginTop="3sp"
                        android:contentDescription="@string/restart_item" />
                    <TextView
                        android:id="@+id/tv_restart"
                        style="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
                        android:layout_weight="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="5sp"
                        android:text="@string/restart_item"
                        android:textAlignment="center"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/card_back_main_menu"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                app:cardElevation="2sp"
                android:foreground="?attr/selectableItemBackground"
                android:stateListAnimator="@animator/lift_on_touch"
                android:clickable="true"
                app:cardPreventCornerOverlap="false"
                android:focusable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:weightSum="7">
                    <ImageView
                        android:layout_weight="3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/circle_background_white"
                        android:src="@drawable/ic_reply_green_24dp"
                        android:padding="5sp"
                        android:layout_marginTop="3sp"
                        android:contentDescription="@string/back_item" />
                    <TextView
                        android:id="@+id/tv_back_main_menu"
                        style="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
                        android:layout_weight="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="5sp"
                        android:text="@string/back_item"
                        android:textAlignment="center"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>
</ScrollView>