<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.apps.khubab.pharmaquiz.BeginActivity"
        android:orientation="vertical"
        android:padding="5sp"
        android:gravity="center_vertical"
        android:background="@color/colorBackground">
        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:paddingTop="5sp"
            android:layout_margin="5sp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_begin"
                android:layout_gravity="start"
                android:layout_weight=".8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                app:cardElevation="2sp"
                android:foreground="?attr/selectableItemBackground"
                android:stateListAnimator="@animator/lift_on_touch"
                android:clickable="true"
                app:cardPreventCornerOverlap="false"
                android:focusable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:weightSum="7">
                    <ImageView
                        android:layout_weight="3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/circle_background_white"
                        android:src="@drawable/ic_play_arrow_green_24dp"
                        android:padding="15sp"
                        android:layout_marginTop="3sp"
                        android:contentDescription="@string/begin_item" />
                    <TextView
                        style="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
                        android:layout_weight="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="5sp"
                        android:text="@string/begin_item"
                        android:textAlignment="center"/>
                    <View
                        android:layout_weight=".05"
                        android:layout_height="1sp"
                        android:layout_width="match_parent"
                        android:layout_margin="5sp"
                        android:background="@color/colorLightGray"/>
                    <TextView
                        style="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
                        android:layout_weight="1.05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5sp"

                        android:textColor="@android:color/darker_gray"
                        android:text="@string/begin_desc"
                        android:textAlignment="center"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_margin="5sp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_about"
                android:layout_gravity="start"
                android:layout_weight=".8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                app:cardElevation="2sp"
                android:foreground="?attr/selectableItemBackground"
                android:stateListAnimator="@animator/lift_on_touch"
                android:clickable="true"
                app:cardPreventCornerOverlap="false"
                android:focusable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:weightSum="7">
                    <ImageView
                        android:layout_weight="3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/circle_background_white"
                        android:src="@drawable/ic_code_green_24dp"
                        android:padding="15sp"
                        android:layout_marginTop="3sp"
                        android:contentDescription="@string/about_item" />
                    <TextView
                        style="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
                        android:layout_weight="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="5sp"
                        android:text="@string/about_item"
                        android:textAlignment="center"/>
                    <View
                        android:layout_weight=".05"
                        android:layout_height="1sp"
                        android:layout_width="match_parent"
                        android:layout_margin="5sp"
                        android:background="@color/colorLightGray"/>
                    <TextView
                        style="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
                        android:layout_weight="1.05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5sp"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/about_desc"
                        android:textAlignment="center"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_margin="5sp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_exit"
                android:layout_gravity="start"
                android:layout_weight=".8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                app:cardElevation="2sp"
                android:foreground="?attr/selectableItemBackground"
                android:stateListAnimator="@animator/lift_on_touch"
                android:clickable="true"
                app:cardPreventCornerOverlap="false"
                android:focusable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:weightSum="7">
                    <ImageView
                        android:layout_weight="3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/circle_background_white"
                        android:src="@drawable/ic_reply_green_24dp"
                        android:padding="15sp"
                        android:layout_marginTop="3sp"
                        android:contentDescription="@string/exit_item" />
                    <TextView
                        style="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
                        android:layout_weight="2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="5sp"
                        android:text="@string/exit_item"
                        android:textAlignment="center"/>
                    <View
                        android:layout_weight=".05"
                        android:layout_height="1sp"
                        android:layout_width="match_parent"
                        android:layout_margin="5sp"
                        android:background="@color/colorLightGray"/>
                    <TextView
                        style="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
                        android:layout_weight="1.05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5sp"
                        android:textColor="@android:color/darker_gray"
                        android:text="@string/exit_desc"
                        android:textAlignment="center"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
